--- a/SignalRChat/SignalRChat.csproj
+++ b/SignalRChat/SignalRChat.csproj
@@ -2,11 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TypeScriptToolsVersion>2.8</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Properties\PublishProfiles\SignalRChat20180409114932 - Web Deploy.pubxml" />
     <None Remove="Properties\PublishProfiles\SignalRChat20180410122408 - Web Deploy.pubxml" />
+    <None Remove="Properties\PublishProfiles\SignalRChattR - Web Deploy.pubxml" />
     <None Remove="Properties\PublishProfiles\SignalRChattRR - Web Deploy.pubxml" />
   </ItemGroup>
 
