--- a/SignalRChat/Properties/launchSettings.json
+++ b/SignalRChat/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44314/",
-      "sslPort": 44314
+      "applicationUrl": "http://localhost:57586",
+      "sslPort": 44317
     }
   },
   "profiles": {
@@ -12,15 +12,14 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORT": "44314",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "SignalRChat": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_URLS": "https://localhost:5001;http://localhost:5000",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
