--- a/SignalRChatClient/packages.config
+++ b/SignalRChatClient/packages.config
@@ -22,6 +22,7 @@
   <package id="System.Buffers" version="4.5.0-preview2-26406-04" targetFramework="net461" />
   <package id="System.IO.Pipelines" version="4.5.0-preview2-26406-04" targetFramework="net461" />
   <package id="System.Memory" version="4.5.0-preview2-26406-04" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0-preview2-26406-04" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-preview2-26406-04" targetFramework="net461" />
   <package id="System.Threading.Channels" version="4.5.0-preview2-26406-04" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.0-preview2-26406-04" targetFramework="net461" />
